--- a/TLCN/config.env
+++ b/TLCN/config.env
@@ -1,7 +1,7 @@
 # Database Configuration (MySQL)
-DB_NAME=tech_ecommerce
+DB_NAME=computerdb
 DB_USER=root
-DB_PASSWORD=0411
+DB_PASSWORD=root
 DB_HOST=localhost
 DB_PORT=3306
 
